--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://api-maps.yandex.ru/v3/?apikey=439ecfcd-85a3-4bbc-93ca-9f7d72faf9f6&lang=ru_RU"></script>
 </head>
 <body>
   <app-root>
